# Tic-Tac-Toe

./: .gitignore  README.md  board.py  game.py  game_interface.py  main.py  play_game  player.py  pyproject.toml
TicTacToe/: __init__.py  board.py  board_simulation.py  cli.py  game.py  game_interface.py  game_simulation.py  player.py  player_human.py  player_random.py  player_smart.py  tic_tac_toe.py  utils.py
TicTacToe/data_model/: move.py
TicTacToe/game/: game.py  game_simulation.py  tic_tac_toe.py
TicTacToe/interface/: board.py  game_interface.py
TicTacToe/players/: player.py  player_human.py  player_random.py  player_smart.py
TicTacToe/utils/: utils.py
